--- a/.env
+++ b/.env
@@ -5,3 +5,9 @@ DB_PORT=3306
 DB_NAME="construye"
 
 SECRET_KEY="supercalifragilisticospialidoso"
+
+MAIL_HOST= "smtp.gmail.com"
+MAIL_PORT = 587
+MAIL_USER = "oficinavirtualbravent@gmail.com"
+MAIL_PASS = "Ab_12345"
+MAIL_APP_PASS ="uejffjkkolnvfplc"
